tests/warn/param-allow2.jo
import jo.IO.stdout

param newLine: String

def foo() =
  print
    "Hello, world!" + newLine

def bar() = foo()

def main = allow stdout in bar()  // error
